Add recent device image gallery API
