# platform/shared/openapi/backend-openapi.json
@@ -746,6 +746,64 @@
         }
       }
     },
+    "/api/devices/{device_id}/images": {
+      "get": {
+        "tags": [
+          "devices"
+        ],
+        "summary": "Get Device Images",
+        "operationId": "get_device_images_api_devices__device_id__images_get",
+        "parameters": [
+          {
+            "name": "device_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Device Id"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "maximum": 50,
+              "minimum": 1,
+              "default": 12,
+              "title": "Limit"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/DeviceSummaryImageRead"
+                  },
+                  "title": "Response Get Device Images Api Devices  Device Id  Images Get"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/devices/{device_id}/commands/light": {
       "post": {
         "tags": [
